@@ -109,7 +109,7 @@
 		<div class="about_wrap moretxt">
 			<h1>{install_title_text}</h1>
 			<p>{install_paragraph1_text}</p>
-			<p>{install_paragraph2_text}<a href="http://s3.yipl.com.np/" target="_blank" class="country_portal">Nepal</a></p>
+			<p>{install_paragraph2_text}<a href="http://dportal.opennepal.net/" target="_blank" class="country_portal">Nepal</a></p>
 	<!--		<p><h1>How to deploy</h1></p>	-->
 			<p>{install_paragraph3_text}</p>
 			<p>{install_paragraph4_text}</p>		
