@@ -19,9 +19,9 @@
 				<div class="tag">{tagline_text}</div>
 				<div class="default pad40">
 					<div class="third">
-						<a class="path no">
+						<a href="#view=generator" class="path">
 							<span class="path_title install">{install_button_text}</span>
-							<span class="path_txt">{install_info_text} <i>{soon_text}</i></span>
+							<span class="path_txt">{install_info_text}</span>
 						</a>
 					</div><div class="third">
 						<a href="#explore" class="path">
