@@ -20,10 +20,10 @@ d-portal.org还处于非常早期的开发，定于四月中旬Alpha版本。感
 发行版
 
 #install_button_text
-发行人
+发电机
 
 #install_info_text
-获取此为您的网站。
+创建小工具为您的网站。
 
 #soon_text
 （不久!)
