@@ -20,10 +20,10 @@ Helping you understand development data.
 Publisher Edition
 
 #install_button_text
-Install
+Generator
 
 #install_info_text
-Get this for your website.
+Create widgets for your website.
 
 #soon_text
 (soon!)
