@@ -20,10 +20,10 @@ Vous aider à comprendre les données de développement.
 Éditeur Edition
 
 #install_button_text
-éditeur
+Générateur
 
 #install_info_text
-Obtenez ceci pour votre site web.
+Créer des widgets pour votre site web.
 
 #soon_text
 (Bientôt!)
