@@ -20,10 +20,10 @@ d-portal.org अप्रैल के मध्य अल्फा रिली
 प्रकाशक संस्करण
 
 #install_button_text
-प्रकाशक
+जेनरेटर
 
 #install_info_text
-अपनी वेबसाइट के लिए यह मिलता है.
+अपनी वेबसाइट के लिए विगेट्स बना. 
 
 #soon_text
 (शीघ्र!)
