@@ -20,10 +20,10 @@ d-portal.org はアルファリリース中旬4月に予定され、非常に初
 出版社版
 
 #install_button_text
-インストール
+発電機
 
 #install_info_text
-あなたのウェブサイトのためにこれを取得します。
+あなたのウェブサイトのためのウィジェットを作成します。 
 
 #soon_text
 （すぐに!）
