@@ -20,10 +20,10 @@ Ayudar a comprender los datos de desarrollo.
 Editorial edición
 
 #install_button_text
-Editor
+Generador
 
 #install_info_text
-Consiga esto para su sitio web.
+Crear widgets para tu sitio web.
 
 #soon_text
 (¡Muy pronto!)
