@@ -1,3 +1,9 @@
+Static site (2014-09-19 shi)
+==============================
+Fixed new URL for Nepal portal
+Added Generator link to replace Install link
+
+
 Static site (2014-09-09 shi)
 ==============================
 Fixed url for widget in About page
